Whiteframes added back in. Socket URL fixed on prod. Flexboxes fixed. Line heights restored to Angular Material's default to keep everything looking OK on mobile

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -74,12 +74,6 @@ md-toolbar.miniToolbar
     }
 }
 
-// Material Design's line height for headlines is comically large.
-h1.md-display-1, h1.md-display-2, h1.md-display-3
-{
-    line-height: 12px;
-}
-
 .md-whiteframe-2dp
 {
     background-color: #fff;
